--- a/games/coin.html
+++ b/games/coin.html
@@ -310,7 +310,7 @@
 
     <!-- Bottom Navigation -->
     <div class="bottom-nav">
-        &copy; 2025 BLOX<span>ZEE</span>. All Rights Reserved.
+        &copy; 2025 Blox<span>zee</span>. All Rights Reserved.
     </div>
 </body>
 </html>
