--- a/games/coin.html
+++ b/games/coin.html
@@ -13,7 +13,6 @@
             color: #ffffff;
         }
 
-        /* Top Navigation */
         .top-nav {
             display: flex;
             justify-content: flex-end;
@@ -52,265 +51,197 @@
             color: #0f0f0f;
         }
 
-        /* Left Navigation */
-        .left-nav {
-            width: 240px;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100%;
-            background-color: #161616;
-            padding-top: 20px;
-            box-shadow: 2px 0 4px rgba(0, 0, 0, 0.5);
-        }
-
-        .left-nav .logo {
-            font-size: 28px;
-            font-weight: 700;
-            letter-spacing: 1px;
-            color: #ffffff;
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        .left-nav .logo span {
-            color: #00ff88;
-        }
-
-        .left-nav a {
-            display: block;
-            color: #ffffff;
-            text-decoration: none;
-            padding: 15px 25px;
-            font-weight: 600;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .left-nav a:hover {
-            background-color: #00ff88;
-            color: #0f0f0f;
-        }
-
-        /* Main Content */
         .main-content {
-            margin-left: 260px;
-            padding: 40px;
             text-align: center;
-        }
-
-        .game-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            padding: 40px;
         }
 
         .coins-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 20px 0;
+            gap: 20px;
+            margin-bottom: 30px;
         }
 
         .coin {
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
             width: 100px;
             height: 100px;
-            border: 3px solid #ffffff;
+            background-color: #1e1e1e;
+            border: 4px solid #00ff88;
             border-radius: 50%;
-            font-size: 24px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 36px;
             font-weight: 700;
             color: #ffffff;
-            margin: 0 20px;
             cursor: pointer;
             transition: border-color 0.3s;
         }
 
         .coin.selected {
-            border-color: #00ff88;
+            border-color: green;
         }
 
-        .or-text {
-            font-size: 18px;
-            color: #ffffff;
-            margin: 0 20px;
-            align-self: center;
+        .bet-container {
+            margin-bottom: 20px;
         }
 
-        .bet-input-container {
-            position: relative;
-            margin-top: 20px;
-        }
-
-        .bet-input {
-            padding: 10px 10px 10px 40px;
-            font-size: 18px;
+        .bet-container input {
+            padding: 10px;
+            font-size: 16px;
             border: 2px solid #00ff88;
-            background-color: #333333;
-            color: #ffffff;
             border-radius: 5px;
-            width: 200px;
+            background-color: #1e1e1e;
+            color: #ffffff;
+            width: 150px;
         }
 
-        .bet-input-container img {
-            position: absolute;
-            left: 10px;
-            top: 50%;
-            transform: translateY(-50%);
+        .bet-container input::placeholder {
+            color: #cccccc;
+        }
+
+        .bet-container input[type="number"]::-webkit-inner-spin-button {
+            display: none;
+        }
+
+        .bet-container img {
             width: 20px;
-            height: 20px;
+            vertical-align: middle;
         }
 
-        .bet-button {
-            background-color: #00ff88;
-            border: none;
-            color: #0f0f0f;
+        .bet-container button {
+            padding: 10px 20px;
+            font-size: 16px;
             font-weight: 600;
-            padding: 12px 20px;
+            border: none;
+            background-color: #00ff88;
+            color: #0f0f0f;
             border-radius: 5px;
             cursor: pointer;
-            transition: background-color 0.3s, filter 0.3s;
-            margin-top: 20px;
+            transition: background-color 0.3s;
         }
 
-        .bet-button:hover {
-            background-color: #00ff88;
-            filter: brightness(80%);
+        .bet-container button:hover {
+            background-color: #00cc66;
         }
 
         .result-message {
-            margin-top: 20px;
             font-size: 18px;
             font-weight: 600;
+            margin-top: 20px;
         }
 
-        /* Bottom Navigation */
-        .bottom-nav {
+        /* Footer (Bottom Nav) */
+        .footer {
+            background-color: #161616;
+            color: #ffffff;
+            text-align: center;
+            padding: 15px 0;
             position: fixed;
             bottom: 0;
-            left: 0;
             width: 100%;
-            background-color: #161616;
-            text-align: center;
-            padding: 10px;
             font-size: 14px;
-            color: #ffffff;
-            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.5);
+            letter-spacing: 0.5px;
         }
     </style>
     <script>
-        // Function to get the 'money' cookie value
-        function getMoney() {
-            const cookieValue = document.cookie.split('; ').find(row => row.startsWith('money='));
-            return cookieValue ? parseInt(cookieValue.split('=')[1]) : null;
-        }
-
-        // Function to set the 'money' cookie value
-        function setMoney(amount) {
-            document.cookie = `money=${amount}; path=/; max-age=31536000`;
-        }
-
-        // Function to format numbers with commas
         function formatNumber(num) {
             return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         }
 
-        // Update the money display in the top nav
-        function updateMoneyDisplay() {
-            const money = getMoney();
-            if (money !== null) {
-                document.querySelector('.money-counter span').textContent = `${formatNumber(money)}`;
+        function checkCookie() {
+            const cookieValue = document.cookie
+                .split('; ')
+                .find(row => row.startsWith('money='))
+                ?.split('=')[1];
+
+            const topNav = document.querySelector('.top-nav');
+            if (cookieValue) {
+                const formattedMoney = formatNumber(cookieValue);
+                topNav.innerHTML = `
+                    <div class="money-counter">
+                        <img src="cash.svg" alt="Cash">
+                        <span><b>${formattedMoney}</b></span>
+                    </div>
+                    <a href="#" class="login" onclick="logout()">Logout</a>
+                `;
             } else {
-                window.location.href = "/"; // Redirect if no money cookie is found
+                topNav.innerHTML = `
+                    <a href="#" class="login" onclick="openLoginModal()">Login</a>
+                `;
             }
         }
 
-        // Function to log out and destroy the money cookie
-        function logout() {
-            document.cookie = "money=; path=/; max-age=0";
-            window.location.href = "/";
-        }
-
-        // Coin selection
         function selectCoin(coin) {
-            document.querySelectorAll('.coin').forEach(c => c.classList.remove('selected'));
+            document.querySelectorAll('.coin').forEach(el => el.classList.remove('selected'));
             coin.classList.add('selected');
         }
 
-        // Place bet function
         function placeBet() {
-            const betAmount = parseInt(document.querySelector('#betAmount').value);
-            const currentMoney = getMoney();
             const selectedCoin = document.querySelector('.coin.selected');
+            const betInput = document.querySelector('.bet-container input');
+            const betValue = parseInt(betInput.value);
+            const resultMessage = document.querySelector('.result-message');
 
-            if (!selectedCoin || isNaN(betAmount) || betAmount <= 0 || betAmount > currentMoney) {
-                return; // Invalid bet
+            if (!selectedCoin || isNaN(betValue) || betValue <= 0) {
+                resultMessage.textContent = "Please select a coin and enter a valid bet.";
+                resultMessage.style.color = "red";
+                return;
             }
 
-            setMoney(currentMoney - betAmount); // Deduct bet amount
+            const cookieValue = document.cookie
+                .split('; ')
+                .find(row => row.startsWith('money='))
+                ?.split('=')[1];
 
-            const win = Math.ceil(Math.random() * 2); // Randomly pick 1 or 2
-            const chosenSide = selectedCoin.textContent === "H" ? 1 : 2;
+            let money = parseInt(cookieValue || 0);
 
-            const resultMessage = document.querySelector('.result-message');
-            if (win === chosenSide) {
-                setMoney(getMoney() + betAmount * 2); // Double the bet if win
-                resultMessage.textContent = "You won!";
+            if (betValue > money) {
+                resultMessage.textContent = "Insufficient funds!";
+                resultMessage.style.color = "red";
+                return;
+            }
+
+            const randomOutcome = Math.floor(Math.random() * 2) + 1; // 1 or 2
+            if (randomOutcome === 2) {
+                money += betValue;
+                resultMessage.textContent = `You won $${formatNumber(betValue)}!`;
                 resultMessage.style.color = "#00ff88";
             } else {
-                resultMessage.textContent = "You lost!";
-                resultMessage.style.color = "#ff0044";
+                money -= betValue;
+                resultMessage.textContent = `You lost $${formatNumber(betValue)}!`;
+                resultMessage.style.color = "red";
             }
 
-            updateMoneyDisplay();
-            document.querySelector('#betAmount').value = ''; // Clear bet input
+            document.cookie = `money=${money}; path=/;`;
+            checkCookie();
         }
 
-        // Initialize the page
-        window.onload = () => {
-            updateMoneyDisplay();
-        };
+        document.addEventListener('DOMContentLoaded', checkCookie);
     </script>
 </head>
 <body>
-    <!-- Top Navigation -->
-    <div class="top-nav">
-        <div class="money-counter">
-            <img src="cash.svg" alt="Money" /> <b><span>0</span></b>
-        </div>
-        <a href="#" class="login" onclick="logout()">Logout</a>
-    </div>
+    <div class="top-nav"></div>
 
-    <!-- Left Navigation -->
-    <div class="left-nav">
-        <div class="logo">BLOX<span>ZEE</span></div>
-        <a href="/">Games</a>
-        <a href="/funds">Funds</a>
-        <a href="/promo">Promotions</a>
-        <a href="/about">About</a>
-    </div>
-
-    <!-- Main Content -->
     <div class="main-content">
-        <div class="game-container">
-            <div class="coins-container">
-                <div class="coin" onclick="selectCoin(this)">H</div>
-                <div class="or-text">OR</div>
-                <div class="coin" onclick="selectCoin(this)">T</div>
-            </div>
-            <div class="bet-input-container">
-                <img src="cash.svg" alt="Cash" />
-                <input type="number" id="betAmount" class="bet-input" placeholder="Enter your bet" />
-            </div>
-            <button class="bet-button" onclick="placeBet()">Bet</button>
-            <div class="result-message"></div>
+        <h1>Coin Toss</h1>
+        <div class="coins-container">
+            <div class="coin" onclick="selectCoin(this)">H</div>
+            <div style="font-size: 24px; align-self: center;">OR</div>
+            <div class="coin" onclick="selectCoin(this)">T</div>
         </div>
+
+        <div class="bet-container">
+            <input type="number" placeholder="Enter Bet">
+            <button onclick="placeBet()">Bet</button>
+        </div>
+        <div class="result-message"></div>
     </div>
 
-    <!-- Bottom Navigation -->
-    <div class="bottom-nav">
-        &copy; 2025 Blox<span>zee</span>. All Rights Reserved.
+    <div class="footer">
+        © 2025 Bloxzee All Rights Reserved.
     </div>
 </body>
 </html>
