--- a/games/coin.html
+++ b/games/coin.html
@@ -13,6 +13,7 @@
             color: #ffffff;
         }
 
+        /* Top Navigation */
         .top-nav {
             display: flex;
             justify-content: flex-end;
@@ -51,89 +52,140 @@
             color: #0f0f0f;
         }
 
-        .main-content {
+        /* Left Navigation */
+        .left-nav {
+            width: 240px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100%;
+            background-color: #161616;
+            padding-top: 20px;
+            box-shadow: 2px 0 4px rgba(0, 0, 0, 0.5);
+        }
+
+        .left-nav .logo {
+            font-size: 28px;
+            font-weight: 700;
+            letter-spacing: 1px;
+            color: #ffffff;
             text-align: center;
+            margin-bottom: 40px;
+        }
+
+        .left-nav .logo span {
+            color: #00ff88;
+        }
+
+        .left-nav a {
+            display: block;
+            color: #ffffff;
+            text-decoration: none;
+            padding: 15px 25px;
+            font-weight: 600;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .left-nav a:hover {
+            background-color: #00ff88;
+            color: #0f0f0f;
+        }
+
+        /* Main Content */
+        .main-content {
+            margin-left: 260px;
             padding: 40px;
+            text-align: center;
+        }
+
+        .game-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .coins-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 20px;
-            margin-bottom: 30px;
+            margin: 20px 0;
         }
 
         .coin {
-            width: 100px;
-            height: 100px;
-            background-color: #1e1e1e;
-            border: 4px solid #00ff88;
-            border-radius: 50%;
-            display: flex;
+            display: inline-flex;
             justify-content: center;
             align-items: center;
-            font-size: 36px;
+            width: 100px;
+            height: 100px;
+            border: 3px solid #ffffff;
+            border-radius: 50%;
+            font-size: 24px;
             font-weight: 700;
             color: #ffffff;
+            margin: 0 20px;
             cursor: pointer;
             transition: border-color 0.3s;
         }
 
         .coin.selected {
-            border-color: green;
+            border-color: #00ff88;
         }
 
-        .bet-container {
-            margin-bottom: 20px;
-        }
-
-        .bet-container input {
-            padding: 10px;
-            font-size: 16px;
-            border: 2px solid #00ff88;
-            border-radius: 5px;
-            background-color: #1e1e1e;
-            color: #ffffff;
-            width: 150px;
-        }
-
-        .bet-container input::placeholder {
-            color: #cccccc;
-        }
-
-        .bet-container input[type="number"]::-webkit-inner-spin-button {
-            display: none;
-        }
-
-        .bet-container img {
-            width: 20px;
-            vertical-align: middle;
-        }
-
-        .bet-container button {
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: 600;
-            border: none;
-            background-color: #00ff88;
-            color: #0f0f0f;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .bet-container button:hover {
-            background-color: #00cc66;
-        }
-
-        .result-message {
+        .or-text {
             font-size: 18px;
-            font-weight: 600;
+            color: #ffffff;
+            margin: 0 20px;
+            align-self: center;
+        }
+
+        .bet-input-container {
+            position: relative;
             margin-top: 20px;
         }
 
-        /* Footer (Bottom Nav) */
+        .bet-input {
+            padding: 10px 10px 10px 40px;
+            font-size: 18px;
+            border: 2px solid #00ff88;
+            background-color: #333333;
+            color: #ffffff;
+            border-radius: 5px;
+            width: 200px;
+        }
+
+        .bet-input-container img {
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 20px;
+            height: 20px;
+        }
+
+        .bet-button {
+            background-color: #00ff88;
+            border: none;
+            color: #0f0f0f;
+            font-weight: 600;
+            padding: 12px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s, filter 0.3s;
+            margin-top: 20px;
+        }
+
+        .bet-button:hover {
+            background-color: #00ff88;
+            filter: brightness(80%);
+        }
+
+        .result-message {
+            margin-top: 20px;
+            font-size: 18px;
+            font-weight: 600;
+        }
+
+        /* Bottom Navigation (from index file) */
         .footer {
             background-color: #161616;
             color: #ffffff;
@@ -147,101 +199,117 @@
         }
     </style>
     <script>
+        // Function to get the 'money' cookie value
+        function getMoney() {
+            const cookieValue = document.cookie.split('; ').find(row => row.startsWith('money='));
+            return cookieValue ? parseInt(cookieValue.split('=')[1]) : null;
+        }
+
+        // Function to set the 'money' cookie value
+        function setMoney(amount) {
+            document.cookie = `money=${amount}; path=/; max-age=31536000`;
+        }
+
+        // Function to format numbers with commas
         function formatNumber(num) {
             return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         }
 
-        function checkCookie() {
-            const cookieValue = document.cookie
-                .split('; ')
-                .find(row => row.startsWith('money='))
-                ?.split('=')[1];
-
-            const topNav = document.querySelector('.top-nav');
-            if (cookieValue) {
-                const formattedMoney = formatNumber(cookieValue);
-                topNav.innerHTML = `
-                    <div class="money-counter">
-                        <img src="cash.svg" alt="Cash">
-                        <span><b>${formattedMoney}</b></span>
-                    </div>
-                    <a href="#" class="login" onclick="logout()">Logout</a>
-                `;
+        // Update the money display in the top nav
+        function updateMoneyDisplay() {
+            const money = getMoney();
+            if (money !== null) {
+                document.querySelector('.money-counter span').textContent = `${formatNumber(money)}`;
             } else {
-                topNav.innerHTML = `
-                    <a href="#" class="login" onclick="openLoginModal()">Login</a>
-                `;
+                window.location.href = "/"; // Redirect if no money cookie is found
             }
         }
 
+        // Function to log out and destroy the money cookie
+        function logout() {
+            document.cookie = "money=; path=/; max-age=0";
+            window.location.href = "/";
+        }
+
+        // Coin selection
         function selectCoin(coin) {
-            document.querySelectorAll('.coin').forEach(el => el.classList.remove('selected'));
+            document.querySelectorAll('.coin').forEach(c => c.classList.remove('selected'));
             coin.classList.add('selected');
         }
 
+        // Place bet function
         function placeBet() {
+            const betAmount = parseInt(document.querySelector('#betAmount').value);
+            const currentMoney = getMoney();
             const selectedCoin = document.querySelector('.coin.selected');
-            const betInput = document.querySelector('.bet-container input');
-            const betValue = parseInt(betInput.value);
+
+            if (!selectedCoin || isNaN(betAmount) || betAmount <= 0 || betAmount > currentMoney) {
+                return; // Invalid bet
+            }
+
+            setMoney(currentMoney - betAmount); // Deduct bet amount
+
+            const win = Math.ceil(Math.random() * 2); // Randomly pick 1 or 2
+            const chosenSide = selectedCoin.textContent === "H" ? 1 : 2;
+
             const resultMessage = document.querySelector('.result-message');
-
-            if (!selectedCoin || isNaN(betValue) || betValue <= 0) {
-                resultMessage.textContent = "Please select a coin and enter a valid bet.";
-                resultMessage.style.color = "red";
-                return;
-            }
-
-            const cookieValue = document.cookie
-                .split('; ')
-                .find(row => row.startsWith('money='))
-                ?.split('=')[1];
-
-            let money = parseInt(cookieValue || 0);
-
-            if (betValue > money) {
-                resultMessage.textContent = "Insufficient funds!";
-                resultMessage.style.color = "red";
-                return;
-            }
-
-            const randomOutcome = Math.floor(Math.random() * 2) + 1; // 1 or 2
-            if (randomOutcome === 2) {
-                money += betValue;
-                resultMessage.textContent = `You won $${formatNumber(betValue)}!`;
+            if (win === chosenSide) {
+                setMoney(getMoney() + betAmount * 2); // Double the bet if win
+                resultMessage.textContent = "You won!";
                 resultMessage.style.color = "#00ff88";
             } else {
-                money -= betValue;
-                resultMessage.textContent = `You lost $${formatNumber(betValue)}!`;
-                resultMessage.style.color = "red";
+                resultMessage.textContent = "You lost!";
+                resultMessage.style.color = "#ff0044";
             }
 
-            document.cookie = `money=${money}; path=/;`;
-            checkCookie();
+            updateMoneyDisplay();
+            document.querySelector('#betAmount').value = ''; // Clear bet input
         }
 
-        document.addEventListener('DOMContentLoaded', checkCookie);
+        // Initialize the page
+        window.onload = () => {
+            updateMoneyDisplay();
+        };
     </script>
 </head>
 <body>
-    <div class="top-nav"></div>
-
-    <div class="main-content">
-        <h1>Coin Toss</h1>
-        <div class="coins-container">
-            <div class="coin" onclick="selectCoin(this)">H</div>
-            <div style="font-size: 24px; align-self: center;">OR</div>
-            <div class="coin" onclick="selectCoin(this)">T</div>
+    <!-- Top Navigation -->
+    <div class="top-nav">
+        <div class="money-counter">
+            <img src="cash.svg" alt="Money" /> <b><span>0</span></b>
         </div>
-
-        <div class="bet-container">
-            <input type="number" placeholder="Enter Bet">
-            <button onclick="placeBet()">Bet</button>
-        </div>
-        <div class="result-message"></div>
+        <a href="#" class="login" onclick="logout()">Logout</a>
     </div>
 
+    <!-- Left Navigation -->
+    <div class="left-nav">
+        <div class="logo">BLOX<span>ZEE</span></div>
+        <a href="/">Games</a>
+        <a href="/funds">Funds</a>
+        <a href="/promo">Promotions</a>
+        <a href="/about">About</a>
+    </div>
+
+    <!-- Main Content -->
+    <div class="main-content">
+        <div class="game-container">
+            <div class="coins-container">
+                <div class="coin" onclick="selectCoin(this)">H</div>
+                <div class="or-text">OR</div>
+                <div class="coin" onclick="selectCoin(this)">T</div>
+            </div>
+            <div class="bet-input-container">
+                <img src="cash.svg" alt="Cash" />
+                <input type="number" id="betAmount" class="bet-input" placeholder="Enter your bet" />
+            </div>
+            <button class="bet-button" onclick="placeBet()">Bet</button>
+            <div class="result-message"></div>
+        </div>
+    </div>
+
+    <!-- Bottom Navigation (updated footer) -->
     <div class="footer">
-        © 2025 Bloxzee All Rights Reserved.
+        <p>&copy; 2025 BLOX<span>ZEE</span>. All Rights Reserved.</p>
     </div>
 </body>
 </html>
