--- a/games/coin.html
+++ b/games/coin.html
@@ -190,7 +190,7 @@
             background-color: #161616;
             color: #ffffff;
             text-align: center;
-            padding: 15px 0;
+            padding: 0px 0;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -309,7 +309,7 @@
 
     <!-- Bottom Navigation (updated footer) -->
     <div class="footer">
-        <p>&copy; 2025 BLOX<span>ZEE</span>. All Rights Reserved.</p>
+        <p>&copy; 2025 Blox<span>zee</span>. All Rights Reserved.</p>
     </div>
 </body>
 </html>
