--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        © 2025 Bloxzee All Rights Reserved.
+        © 2025 Bloxzee. All Rights Reserved.
     </div>
 
 </body>
