--- a/games/flip.html
+++ b/games/flip.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bloxzee - Flip Game</title>
+    <title>Bloxzee - Flip</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -179,7 +179,7 @@
             background-color: #161616;
             color: #ffffff;
             text-align: center;
-            padding: 15px 0;
+            padding: 1px 0;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -294,7 +294,7 @@
 
     <!-- Bottom Navigation -->
     <div class="footer">
-        <p>&copy; 2025 BLOX<span>ZEE</span>. All Rights Reserved.</p>
+        <p>&copy; 2025 Blox<span>zee</span>. All Rights Reserved.</p>
     </div>
 </body>
 </html>
