--- a/games/number.html
+++ b/games/number.html
@@ -118,7 +118,7 @@
             font-weight: 600;
             width: 60px;
             height: 60px;
-            border-radius: 50%;
+            border-radius: 12%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -185,7 +185,7 @@
             background-color: #161616;
             color: #ffffff;
             text-align: center;
-            padding: 15px 0;
+            padding: 1px 0;
             position: fixed;
             bottom: 0;
             width: 100%;
@@ -317,7 +317,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p>&copy; 2025 BLOX<span>ZEE</span>. All Rights Reserved.</p>
+        <p>&copy; 2025 Blox<span>zee</span>. All Rights Reserved.</p>
     </div>
 </body>
 </html>
