--- a/index.html
+++ b/index.html
@@ -129,12 +129,6 @@
             transform: translateY(-5px);
         }
 
-        .game-card a {
-            color: inherit;
-            text-decoration: none;
-            display: block;
-        }
-
         .counter {
             margin-top: 1px;
             display: flex;
@@ -296,6 +290,11 @@
             location.reload();
         }
 
+        // Function to handle navigation when a game card is clicked
+        function redirectToGame(url) {
+            window.location.href = url;
+        }
+
         document.addEventListener('DOMContentLoaded', checkCookie);
     </script>
 </head>
@@ -318,43 +317,43 @@
     <div class="main-content">
         <h1>Popular Games</h1>
         <div class="game-cards">
-            <div class="game-card"><a href="/games/flip">Flip</a></div>
-            <div class="game-card"><a href="/games/pvp">PVP</a></div>
-            <div class="game-card"><a href="/games/coin">Coin Toss</a></div>
-            <div class="game-card"><a href="/games/number">Pick the Number</a></div>
+            <div class="game-card" onclick="redirectToGame('/games/flip')">Flip</div>
+            <div class="game-card" onclick="redirectToGame('/games/pvp')">PVP</div>
+            <div class="game-card" onclick="redirectToGame('/games/coin')">Coin Toss</div>
+            <div class="game-card" onclick="redirectToGame('/games/number')">Pick the Number</div>
         </div>
 
-        <h1>Statistics</h1>
+        <!-- Counter Cards -->
         <div class="counter">
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">1,000,000</div>
-                <div class="paid-out">PAID OUT GLOBALLY</div>
+                <div class="amount">
+                    <img src="cash.svg" alt="Cash"> 50,000
+                </div>
+                <div class="paid-out">Paid Out: 25,000</div>
             </div>
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">250,000</div>
-                <div class="paid-out">PAID OUT WEEKLY</div>
+                <div class="amount">
+                    <img src="cash.svg" alt="Cash"> 70,000
+                </div>
+                <div class="paid-out">Paid Out: 35,000</div>
             </div>
-            <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">18,000</div>
-                <div class="paid-out">PAID OUT DAILY</div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Login Modal -->
-    <div class="login-modal">
-        <div class="login-modal-content">
-            <span class="close-modal" onclick="closeLoginModal()">x</span>
-            <h2>Login</h2>
-            <input type="password" id="keyInput" placeholder="Enter Key">
-            <button onclick="login()">Login</button>
         </div>
     </div>
 
     <!-- Footer -->
     <div class="footer">
-        © 2025 Bloxzee. All Rights Reserved.
+        &copy; 2025 Bloxzee. All rights reserved.
     </div>
 
+    <!-- Login Modal -->
+    <div class="login-modal">
+        <div class="login-modal-content">
+            <span class="close-modal" onclick="closeLoginModal()">&times;</span>
+            <h2>Login</h2>
+            <input type="text" placeholder="Enter your username">
+            <input type="password" placeholder="Enter your password">
+            <button onclick="login()">Login</button>
+        </div>
+    </div>
 </body>
 </html>
