--- a/promo.html
+++ b/promo.html
@@ -173,7 +173,7 @@
         const promoCodes = [
             { code: "FREE2K", reward: 2000 },
             { code: "2025", reward: 250 },
-            { code: "LAUNCH", reward: 100 }
+            { code: "ZONE", reward: 75 }
         ];
 
         // Temporary variable for tracking redeemed codes in this page session
