--- a/index.html
+++ b/index.html
@@ -327,16 +327,16 @@
         <h1>Statistics</h1>
         <div class="counter">
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">1,000,000</div>
-                <div class="paid-out">PAID OUT GLOBALLY</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">27,205,048</div>
+                <div class="paid-out">GLOBAL PAYOUTS</div>
             </div>
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">250,000</div>
-                <div class="paid-out">PAID OUT WEEKLY</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">117,405,375</div>
+                <div class="paid-out">GLOBAL WAGERED</div>
             </div>
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">18,000</div>
-                <div class="paid-out">PAID OUT DAILY</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">25,000,000+</div>
+                <div class="paid-out">GLOBAL FREE RAINS</div>
             </div>
         </div>
     </div>
