--- a/index.html
+++ b/index.html
@@ -30,10 +30,6 @@
          align-items: center;
          gap: 10px;
          }
-         .top-nav .money-counter img {
-         width: 25px;
-         height: 25px;
-         }
          .top-nav .login {
          color: #00ff88;
          font-weight: 600;
@@ -113,18 +109,32 @@
          color: #0f0f0f;
          transform: translateY(-5px);
          }
-         .game-card a {
-         color: inherit;
-         text-decoration: none;
+         .counter {
+         margin-top: 1px;
          display: flex;
-         justify-content: center;
-         align-items: center;
-         gap: 10px;
+         justify-content: space-between;
+         gap: 20px;
+         flex-wrap: wrap;
          }
-         .game-card img {
-         width: 20px;
-         height: 20px;
-         filter: brightness(0) invert(1);
+         .counter-card {
+         background-color: #1e1e1e;
+         border: 2px solid #00ff88;
+         padding: 20px;
+         text-align: center;
+         border-radius: 10px;
+         flex: 1;
+         min-width: 250px;
+         max-width: 400px;
+         }
+         .counter .amount {
+         font-size: 28px;
+         font-weight: 700;
+         margin-bottom: 5px;
+         }
+         .counter .paid-out {
+         font-size: 16px;
+         font-weight: 300;
+         color: #cccccc;
          }
          /* Footer */
          .footer {
@@ -211,7 +221,7 @@
                  const formattedMoney = formatNumber(cookieValue);
                  topNav.innerHTML = `
                      <div class="money-counter">
-                         <img src="cash.svg" alt="Cash">
+                         <svg width="25" height="25"><use xlink:href="#cash-icon"></use></svg>
                          <span><b>${formattedMoney}</b></span>
                      </div>
                      <a href="#" class="login" onclick="logout()">Logout</a>
@@ -245,61 +255,87 @@
       </script>
    </head>
    <body>
+      <!-- Inline SVGs -->
+      <svg style="display: none;">
+         <symbol id="cash-icon" viewBox="0 0 24 24">
+            <rect x="2" y="5" width="20" height="14" rx="2" fill="#00ff88" />
+            <circle cx="12" cy="12" r="4" fill="#0f0f0f" />
+            <text x="12" y="16" font-size="6" text-anchor="middle" fill="#00ff88" font-weight="bold">$</text>
+         </symbol>
+      </svg>
       <!-- Top Navigation -->
       <div class="top-nav">
          <a href="#" class="login" onclick="openLoginModal()">Login</a>
       </div>
       <!-- Left Navigation -->
       <div class="left-nav">
-         <div class="logo">BLOX<span>ZEE</span></div>
-         <a href="/">Games</a>
-         <a href="#">Leaderboard</a>
-         <a href="#">Shop</a>
-         <a href="#">Settings</a>
+         <div class="logo">BLOX<span>ZEE</span</div>
+         <a href="/">Games</a> <a href="/funds">Funds</a> <a href="/promo">Promotions</a> <a href="/about">About</a> 
       </div>
       <!-- Main Content -->
       <div class="main-content">
-         <h1>Available Games</h1>
+         <h1>Popular Games</h1>
          <div class="game-cards">
             <div class="game-card">
-               <a href="game1.html">
-               <img src="game_icon1.svg" alt="Game 1 Icon">
-               Game 1
-               </a>
+               <svg width="50" height="50">
+                  <use xlink:href="#cash-icon"></use>
+               </svg>
+               <a href="/games/flip">Flip</a>
             </div>
             <div class="game-card">
-               <a href="game2.html">
-               <img src="game_icon2.svg" alt="Game 2 Icon">
-               Game 2
-               </a>
+               <svg width="50" height="50">
+                  <use xlink:href="#cash-icon"></use>
+               </svg>
+               <a href="/games/pvp">PVP</a>
             </div>
             <div class="game-card">
-               <a href="game3.html">
-               <img src="game_icon3.svg" alt="Game 3 Icon">
-               Game 3
-               </a>
-            </div>
-            <div class="game-card">
-               <a href="game4.html">
-               <img src="game_icon4.svg" alt="Game 4 Icon">
-               Game 4
-               </a>
+               <svg width="50" height="50">
+                  <use xlink:href="#cash-icon"></use>
+               </svg>
+               <a href="/games/coin">Coin Toss</a>
             </div>
          </div>
-      </div>
-      <!-- Footer -->
-      <div class="footer">
-         © 2025 Bloxzee. All rights reserved.
+         <h1>Statistics</h1>
+         <div class="counter">
+            <div class="counter-card">
+               <div class="amount">
+                  <svg width="25" height="25">
+                     <use xlink:href="#cash-icon"></use>
+                  </svg>
+                  27M+
+               </div>
+               <div class="paid-out">GLOBAL PAYOUTS</div>
+            </div>
+            <div class="counter-card">
+               <div class="amount">
+                  <svg width="25" height="25">
+                     <use xlink:href="#cash-icon"></use>
+                  </svg>
+                  54M+
+               </div>
+               <div class="paid-out">GLOBAL WAGERED</div>
+            </div>
+            <div class="counter-card">
+               <div class="amount">
+                  <svg width="25" height="25">
+                     <use xlink:href="#cash-icon"></use>
+                  </svg>
+                  2.4M+
+               </div>
+               <div class="paid-out">GLOBAL RAINED</div>
+            </div>
+         </div>
       </div>
       <!-- Login Modal -->
       <div class="login-modal">
          <div class="login-modal-content">
-            <span class="close-modal" onclick="closeLoginModal()">&times;</span>
+            <span class="close-modal" onclick="closeLoginModal()">x</span>
             <h2>Login</h2>
-            <input type="text" placeholder="Username">
-            <input type="password" placeholder="Password">
+            <input type="password" id="keyInput" placeholder="Enter Key">
             <button onclick="login()">Login</button>
          </div>
       </div>
-   </body>
-</html>
+      <!-- Footer -->
+      <div class="footer">
+         © 2025 Bloxzee. All Rights Reserved.
+      </div>
