--- a/games/pvp.html
+++ b/games/pvp.html
@@ -100,7 +100,7 @@
          background-color: #333333;
          color: #ffffff;
          border-radius: 5px;
-         width: 200px;
+         width: 160px;
          margin-bottom: 20px;
          }
          .bet-input-wrapper {
@@ -109,7 +109,7 @@
          }
          .bet-input-wrapper img {
          position: absolute;
-         top: 50%;
+         top: 35%;
          left: 10px;
          transform: translateY(-50%);
          width: 20px;
@@ -138,7 +138,8 @@
          padding: 15px 0;
          position: fixed;
          bottom: 0;
-         width: 100%;
+         left: 260px; /* Aligns footer with left-nav */
+         width: calc(100% - 260px); /* Matches the width of the content area */
          font-size: 14px;
          letter-spacing: 0.5px;
          }
