--- a/games/pvp.html
+++ b/games/pvp.html
@@ -138,8 +138,8 @@
          padding: 15px 0;
          position: fixed;
          bottom: 0;
-         left: 260px; /* Aligns footer with left-nav */
-         width: calc(100% - 260px); /* Matches the width of the content area */
+         left: 0; /* Align footer with the side navigation */
+         width: calc(100% - 240px); /* Subtract the width of the side navigation */
          font-size: 14px;
          letter-spacing: 0.5px;
          }
