--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <h1>Popular Games</h1>
         <div class="game-cards">
             <div class="game-card"><a href="/games/flip">Flip</a></div>
-            <div class="game-card"><a href="/games/pvp">PVP</a></div>
+            <div class="game-card"><a href="/games/pvp">PvP</a></div>
             <div class="game-card"><a href="/games/coin">Coin Toss</a></div>
             <div class="game-card"><a href="/games/number">Pick the Number</a></div>
         </div>
@@ -327,15 +327,15 @@
         <h1>Statistics</h1>
         <div class="counter">
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">142M+</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">542M+</div>
                 <div class="paid-out">GLOBAL PAYOUTS</div>
             </div>
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">254M+</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">1.15B+</div>
                 <div class="paid-out">GLOBAL WAGERED</div>
             </div>
             <div class="counter-card">
-                <div class="amount"><img src="cash.svg" alt="Cash">7.8M+</div>
+                <div class="amount"><img src="cash.svg" alt="Cash">26.3M+</div>
                 <div class="paid-out">GLOBAL RAINED</div>
             </div>
         </div>
