--- a/games/pvp.html
+++ b/games/pvp.html
@@ -111,6 +111,11 @@
             border-radius: 5px;
             width: 200px;
             margin-bottom: 20px;
+            background-image: url('cash.svg');
+            background-size: 20px;
+            background-position: 10px center;
+            background-repeat: no-repeat;
+            padding-left: 40px;
         }
 
         .bet-button {
