--- a/games/pvp.html
+++ b/games/pvp.html
@@ -115,6 +115,7 @@
             background-size: 20px;
             background-position: 10px center;
             background-repeat: no-repeat;
+            text-align: left;
             padding-left: 40px;
         }
 
