--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             display: inline-flex;
             align-items: center;
             background-color: #00ff88; /* Background for the badge */
-            color: #ffffff;           /* Text color */
+            color: #0f0f0f;           /* Text color */
             border-radius: 5px;       /* Rounded corners */
             padding: 5px 10px;        /* Spacing inside the badge */
             margin-left: 10px;        /* Space between "Popular Games" and the badge */
