--- a/index.html
+++ b/index.html
@@ -267,14 +267,15 @@
 
         /* Badge Icon Styling */
 
-        .badge img {
-            width: 20px;              /* Size of the cash icon */
-            height: 20px;
-            margin-right: 5px;        /* Space between the icon and the text */
-            -webkit-user-drag: none;  /* Prevent dragging */
-            user-drag: none;
-        }
 
+        .badge img {
+            width: 20px;                  /* Size of the cash icon */
+            height: 20px;
+            margin-right: 5px;            /* Space between the icon and the text */
+            -webkit-user-drag: none;      /* Prevent dragging */
+            user-drag: none;
+            filter: brightness(0.06);     /* Adjust brightness to create #0f0f0f */
+        }
 
     </style>
     <script>
