--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         // Example: Call this function with true or false
         document.addEventListener('DOMContentLoaded', () => {
             // Set to true to show the badge or false to hide it
-            toggleBadge(true);
+            toggleBadge(false);
         });
 
         document.addEventListener('DOMContentLoaded', checkCookie);
@@ -359,7 +359,7 @@
             Popular Games 
             <div id="badge" class="badge" style="display: none;">
                 <img src="cash.svg" alt="Cash Icon">
-                <span>3x</span>
+                <span>3x Rewards!</span>
             </div>
         </h1>
 
