--- a/games/pvp.html
+++ b/games/pvp.html
@@ -246,6 +246,7 @@
     <div class="left-nav">
         <div class="logo">BLOX<span>ZEE</span></div>
         <a href="/">Games</a>
+        <a href="/rain">Rain</a>
         <a href="/funds">Funds</a>
         <a href="/promo">Promotions</a>
         <a href="/about">About</a>
