--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         // Example: Call this function with true or false
         document.addEventListener('DOMContentLoaded', () => {
             // Set to true to show the badge or false to hide it
-            toggleBadge(false); // (show) or (hide)
+            toggleBadge(true); // (show) or (hide)
         });
 
         
@@ -426,7 +426,7 @@
 
         <!-- Announcement Box -->
         <div id="announcement" class="announcement">
-            <p>Our new <a href="https://bloxzee.github.io" target="/rain">Click here</a> feature is live— get ready for a shower of earnings!</p>
+            <p>Our new <a href="https://bloxzee.github.io" target="/rain">Rain</a> feature is live— get ready for a shower of earnings!</p>
         </div>
         
         <h1>
