--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
         <!-- Announcement Box -->
         <div id="announcement" class="announcement">
-            <p>Our new <a href="https://bloxzee.github.io" target="/rain">Rain</a> feature is live— get ready for a shower of earnings!</p>
+            <p>Our new <a href="/rain">Rain</a> feature is live— get ready for a shower of earnings!</p>
         </div>
         
         <h1>
